# seeking-alpha-homework

./: .env.example  .gitignore  Makefile  README.md  SOLUTION.md  pyproject.toml  requirements.txt
backend/: README.md
backend/app/: config.py  main.py  schemas.py
backend/app/services/: book_agent.py  pinecone_utils.py
frontend/: README.md  app.js  index.html  styles.css
scripts/: enrich_gutendex_with_openlibrary.py  ingest_gutendex_to_pinecone.py  run_dev.py  verify_setup.py
